--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for @dog do |f| %>
+  <%= f.input :user_id, :as => "hidden", :input_html => { :value => current_user.id } %>
   <%= f.input :name %>
   <%= f.input :description, as: :text %>
-  <%= f.input :image, as: :file %>
+  <%= f.input :image, as: :file, :input_html => { :multiple => true } %>
 
   <% if @dog.images.any? %>
     <%= image_tag @dog.images.first %>
