--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -5,6 +5,12 @@
     <%= image_tag url_for(image), alt: "Photo of #{@dog.name}" %>
   <% end %>
 
+  <% if current_user.present? && current_user != @dog.user %>
+    <%= button_to 'Like', dog_likes_path(@dog), method: :post %>
+  <% end %>
+
+  <p><%= @dog.likes.count %> <%= (@dog.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+
   <p><%= @dog.description %></p>
   <% if current_user.present? && current_user == @dog.user %>
     <%= link_to "Edit #{@dog.name}'s Profile", edit_dog_path %>
